# uvision2cmake

./: .flake8  .gitignore  .pre-commit-config.yaml  .yamllint  CHANGELOG.rst  README.md  constraints.txt  main.py  pyproject.toml  tox.ini
src/uvision_cmake/: __init__.py  parsers.py
